fixed issue with dashboard overflow

--- a/src/routes/DashboardRoute/DashboardRoute.css
+++ b/src/routes/DashboardRoute/DashboardRoute.css
@@ -3,19 +3,26 @@
   margin-top: 0.5em;
 }
 
+.word-list-title {
+  margin-top: 1.5em;
+  font-size: var(--fs-h3);
+}
+
 .word-list {
-  margin: 0 auto;
+  margin: 0;
   display: grid;
-  grid-gap: 2.5em;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 0.75em 1em;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  max-width: 100vw;
 }
 
 .word-to-practice {
-  padding: 1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 0.5em;
   border: 2px solid black;
   border-radius: 2em;
-  min-width: 250px;
-  max-width: 350px;
   margin: 1em;
   box-shadow: var(--bs);
   background: var(--clr-accent);
